--- a/#src/less/style.less
+++ b/#src/less/style.less
@@ -4,7 +4,7 @@ body {
 
 .header {
   &__background {
-    background: url("/images/header-image.png") no-repeat;
+    background: url("images/header-image.png") no-repeat;
     background-size: cover;
     position: relative;
     padding-top: 45px;
@@ -288,13 +288,13 @@ button:hover::before {
   &-arrow.slick-prev {
     right: 0;
     margin-right: 150px;
-    background: url(/images/arrow-prev-red.svg) 0 0 / 70% no-repeat;
+    background: url(images/arrow-prev-red.svg) 0 0 / 70% no-repeat;
     background-position: center;
   }
   &-arrow.slick-next {
     right: 0;
     margin-right: 90px;
-    background: url(/images/arrow-next-red.svg) 0 0 / 70% no-repeat;
+    background: url(images/arrow-next-red.svg) 0 0 / 70% no-repeat;
     background-position: center;
   }
   &-prev:before {
@@ -303,7 +303,7 @@ button:hover::before {
     font-size: 30px;
   }
   &-prev:hover {
-    background: url(/images/arrow-prev.svg) 0 0 / 70% no-repeat;
+    background: url(images/arrow-prev.svg) 0 0 / 70% no-repeat;
   }
   &-next:before {
     content: "";
@@ -324,7 +324,7 @@ button:hover::before {
 
 .programm {
   &__background {
-    background: url("/images/background-img-2.png") no-repeat;
+    background: url("images/background-img-2.png") no-repeat;
     background-size: cover;
     margin-top: 180px;
     padding-top: 45px;
@@ -406,7 +406,7 @@ button:hover::before {
 
 .form {
   &__background {
-    background: url("/images/background-img-3.png") no-repeat;
+    background: url("images/background-img-3.png") no-repeat;
     background-size: cover;
     display: flex;
     justify-content: space-around;
@@ -541,33 +541,33 @@ button:hover::before {
 
 @font-face {
   font-family: "Helvetica";
-  src: url(/fonts/Helvetica/HelveticaBold/HelveticaBold.eot);
-  src: url(/fonts/Helvetica/HelveticaBold/HelveticaBold.eot?#iefix)
+  src: url(fonts/Helvetica/HelveticaBold/HelveticaBold.eot);
+  src: url(fonts/Helvetica/HelveticaBold/HelveticaBold.eot?#iefix)
       format("embedded-opentype"),
-    url(/fonts/Helvetica/HelveticaBold/HelveticaBold.woff) format("woff"),
-    url(/fonts/Helvetica/HelveticaBold/HelveticaBold.ttf) format("truetype");
+    url(fonts/Helvetica/HelveticaBold/HelveticaBold.woff) format("woff"),
+    url(fonts/Helvetica/HelveticaBold/HelveticaBold.ttf) format("truetype");
   font-style: normal;
   font-weight: bold;
 }
 
 @font-face {
   font-family: "Helvetica";
-  src: url(/fonts/Helvetica/HelveticaLight/HelveticaLight.eot);
-  src: url(/fonts/Helvetica/HelveticaLight/HelveticaLight.eot)
+  src: url(fonts/Helvetica/HelveticaLight/HelveticaLight.eot);
+  src: url(fonts/Helvetica/HelveticaLight/HelveticaLight.eot)
       format("embedded-opentype"),
-    url(/fonts/Helvetica/HelveticaLight/HelveticaLight.woff) format("woff"),
-    url(/fonts/Helvetica/HelveticaLight/HelveticaLight.ttf) format("truetype");
+    url(fonts/Helvetica/HelveticaLight/HelveticaLight.woff) format("woff"),
+    url(fonts/Helvetica/HelveticaLight/HelveticaLight.ttf) format("truetype");
   font-style: normal;
   font-weight: 300;
 }
 
 @font-face {
   font-family: "Helvetica";
-  src: url(/fonts/Helvetica/HelveticaRegular/HelveticaRegular.eot);
-  src: url(/fonts/Helvetica/HelveticaRegular/HelveticaRegular.eot)
+  src: url(fonts/Helvetica/HelveticaRegular/HelveticaRegular.eot);
+  src: url(fonts/Helvetica/HelveticaRegular/HelveticaRegular.eot)
       format("embedded-opentype"),
-    url(/fonts/Helvetica/HelveticaRegular/HelveticaRegular.woff) format("woff"),
-    url(/fonts/Helvetica/HelveticaRegular/HelveticaRegular.ttf)
+    url(fonts/Helvetica/HelveticaRegular/HelveticaRegular.woff) format("woff"),
+    url(fonts/Helvetica/HelveticaRegular/HelveticaRegular.ttf)
       format("truetype");
   font-style: normal;
   font-weight: normal;
@@ -575,24 +575,24 @@ button:hover::before {
 
 @font-face {
   font-family: "HelveticaNeueCyr";
-  src: url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.eot);
+  src: url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.eot);
   src: local("HelveticaNeueCyr-Black"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.eot?#iefix)
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.eot?#iefix)
       format("embedded-opentype"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.woff) format("woff"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.ttf) format("truetype");
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.woff) format("woff"),
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.ttf) format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: "HelveticaNeueCyr";
-  src: url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.eot);
+  src: url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.eot);
   src: local("HelveticaNeueCyr-UltraLight"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.eot?#iefix)
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.eot?#iefix)
       format("embedded-opentype"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.woff) format("woff"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.ttf)
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.woff) format("woff"),
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-UltraLight.ttf)
       format("truetype");
   font-weight: 200;
   font-style: normal;
@@ -600,12 +600,12 @@ button:hover::before {
 
 @font-face {
   font-family: "HelveticaNeueCyr";
-  src: url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.eot);
+  src: url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.eot);
   src: local("HelveticaNeueCyr-Light"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.eot?#iefix)
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.eot?#iefix)
       format("embedded-opentype"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.woff) format("woff"),
-    url(/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.ttf) format("truetype");
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.woff) format("woff"),
+    url(fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.ttf) format("truetype");
   font-weight: 300;
   font-style: normal;
 }
